hack: fix handsontable scrollbar spacing with top header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,14 @@ body {
   color: #333;
 }
 
+/* Hack: including this, even though we override it for the body tag. Handsontable looks to this
+to make spacing for the scrollbar instead of the scrollbar settings for its own divs, which we
+also set styles for */
+
+::-webkit-scrollbar {
+  width: 3px;
+}
+
 body::-webkit-scrollbar {
   width: 13px;
   border-radius: 20px;
